# OpenVR-SpaceOverride

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
OpenVR-SpaceCalibrator/: Calibration.cpp  Calibration.h  Configuration.cpp  IPCClient.cpp  IPCClient.h  OpenVR-SpaceCalibrator.cpp  UserInterface.cpp
OpenVR-SpaceCalibratorDriver/: InterfaceHookInjector.cpp  OpenVR-SpaceCalibratorDriver.cpp  OpenVR-SpaceCalibratorDriver.vcxproj  OpenVR-SpaceCalibratorDriver.vcxproj.filters  ServerTrackedDeviceProvider.cpp  ServerTrackedDeviceProvider.h
dev-resources/: installer.nsi
dev-resources/driver/: driver.vrdrivermanifest
include/calibration/: Drift.h  Math.h  PoseBlend.h  PredictionLag.h
include/driver/: Hooking.h  IPCServer.h  InterfaceHookInjector.h  Logging.h  Main.h  OneEuroFilter.h  ServerTrackedDeviceProvider.h
include/overlay/: Calibration.h  Configuration.h  EmbeddedFiles.h  IPCClient.h  ImGuiWindow.h  StandableQuit.h  VulkanRenderer.h  VulkanUtils.h
include/shared/: FilterDefaults.h  Protocol.h  Version.h  VrOverlay.h  VrUtils.h
install/: installer.nsi
lib/imgui/: imgui_impl_glfw.cpp  imgui_impl_glfw.h
resources/: LICENSE.txt  LICENSES  manifest.vrmanifest
scripts/: analyze-vr-logs.ps1  apply-safe-profile.ps1  build-release.ps1  debug-steamvr.ps1  deploy-steamvr.ps1  disable-spaceoverride-driver.ps1  enable-spaceoverride-driver.ps1  harden-steamvr-stack.ps1  package-portable.ps1  package-release.ps1  prune-driver-log.ps1  remove-stale-install.ps1  smoke-test-steamvr.ps1  sync-program-files-admin.ps1  validate-install.ps1
spacecalibratorex/: driver.vrdrivermanifest
spacecalibratorex/resources/settings/: default.vrsettings
src/calibration/: Drift.cpp  Math.cpp  PoseBlend.cpp  PredictionLag.cpp
src/driver/: Hooking.cpp  IPCServer.cpp  InterfaceHookInjector.cpp  Logging.cpp  Main.cpp  ServerTrackedDeviceProvider.cpp
src/overlay/: Calibration.cpp  Configuration.cpp  EmbeddedFiles.cpp  IPCClient.cpp  ImGuiWindow.cpp  Main.cpp  StandableQuit.cpp  UserInterface.cpp  VulkanRenderer.cpp
src/overlay/ImGui/: imgui_impl_openvr.cpp  imgui_impl_openvr.h
tests/: calibration_math_test.cpp
